BUG#54199 Cluster+DiskData, Querying INFORMATION_SCHEMA.FILES slow when data node is down